# predictive-hdd-failure-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml
data/: data.csv.dvc
data/processed/: .gitignore  data_prepared.csv.dvc  test_data_prepared.csv.dvc  train_data_prepared.csv.dvc  val_data_prepared.csv.dvc
data/raw/: .gitignore  full_dataset.parquet.dvc  test.parquet.dvc  train.parquet.dvc
docs/: DOCKER_COMPOSE.md  PROJECT_TREE.md
legacy/: README.md  main.py
legacy/configs/: config.yaml
legacy/data/: legacy_csv_data_loader.py
legacy/features/: legacy_feature_pipeline.py
legacy/inference/: predict.py
legacy/models/: run_train.py
legacy/split/: legacy_time_split.py
metrics/: drift_metrics.json  metrics.json
models/: .gitignore  features.json.dvc  preprocessing.json.dvc  rf_model.pkl.dvc
monitoring/prometheus/: Dockerfile  prometheus.yml
notebooks/: MLops_backblaze.ipynb  backblaze_hdd_failure_dataset_v2.ipynb  dataset_explore.ipynb  models_experiments.ipynb
predictive-hdd-failure-mlops/: README.md
predictive-hdd-failure-mlops/src/: main.py
reports/: drift_report.md
src/: main.py
src/api/: main.py
src/data/: backblaze_dataset_builder.py  legacy_csv_data_loader.py  load_data.py  make_dataset.py
src/models/: run_train.py  (+3 more)
tests/: test_api.py  test_calculate_drift.py  test_evaluate_baseline.py  test_generate_drift_report.py  test_make_dataset.py  test_train_baseline.py
(+11 files in other folders)
