[project]
name = "predictive-hdd-failure-mlops"
version = "0.1.0"
requires-python = ">=3.10,<3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
extend-exclude = [
    "legacy",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
